{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 31,
  "lineage": "b8926acd-7933-2468-05cd-f29fe0e02307",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-00b92cf894d4fa86a",
            "domain": "vpc",
            "id": "eipalloc-0ed2e525255b80cdd",
            "instance": "i-022ac20f44286dd92",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0074dac223d2b5d5d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-205-193-84.compute-1.amazonaws.com",
            "public_ip": "18.205.193.84",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main-gateway",
            "aws_network_interface.main-nic",
            "aws_security_group.allow_web",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:595415970312:instance/i-022ac20f44286dd92",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022ac20f44286dd92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0074dac223d2b5d5d"
              }
            ],
            "primary_network_interface_id": "eni-0074dac223d2b5d5d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "18.205.193.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075380c51e1e50565",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8fad946e28238d2",
            "tags": {
              "Name": "ubuntu-18.04-from-terraform"
            },
            "tags_all": {
              "Name": "ubuntu-18.04-from-terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b6b09c843a4adbe8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc",
            "aws_network_interface.main-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595415970312:internet-gateway/igw-0ba3ec94f262d6303",
            "id": "igw-0ba3ec94f262d6303",
            "owner_id": "595415970312",
            "tags": {
              "Name": "internet-gateway-from-terraform"
            },
            "tags_all": {
              "Name": "internet-gateway-from-terraform"
            },
            "vpc_id": "vpc-0ac091b27b7b77e43"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0909e4749ab127e4e",
                "device_index": 0,
                "instance": "i-022ac20f44286dd92"
              }
            ],
            "id": "eni-0074dac223d2b5d5d",
            "ipv6_address_count": 0,
            "mac_address": "0e:2c:16:93:a2:bd",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b6b09c843a4adbe8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8fad946e28238d2"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595415970312:route-table/rtb-076150cccd50c2c2a",
            "id": "rtb-076150cccd50c2c2a",
            "owner_id": "595415970312",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba3ec94f262d6303",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba3ec94f262d6303",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-from-terraform"
            },
            "tags_all": {
              "Name": "route-table-from-terraform"
            },
            "vpc_id": "vpc-0ac091b27b7b77e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gateway",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc1fbb519e7cf57d",
            "route_table_id": "rtb-076150cccd50c2c2a",
            "subnet_id": "subnet-0e8fad946e28238d2"
          },
          "dependencies": [
            "aws_internet_gateway.main-gateway",
            "aws_route_table.main-route-table",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595415970312:security-group/sg-0b6b09c843a4adbe8",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6b09c843a4adbe8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "595415970312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac091b27b7b77e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595415970312:subnet/subnet-0e8fad946e28238d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e8fad946e28238d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "595415970312",
            "tags": {
              "Name": "subnet-terraform"
            },
            "tags_all": {
              "Name": "subnet-terraform"
            },
            "vpc_id": "vpc-0ac091b27b7b77e43"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595415970312:vpc/vpc-0ac091b27b7b77e43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05223aa9a6484aa62",
            "default_route_table_id": "rtb-0543b97858347f4d6",
            "default_security_group_id": "sg-00342a1fa4b9331d3",
            "dhcp_options_id": "dopt-a9240fd3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ac091b27b7b77e43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0543b97858347f4d6",
            "owner_id": "595415970312",
            "tags": {
              "Name": "virtual-private-cloud-from-terraform"
            },
            "tags_all": {
              "Name": "virtual-private-cloud-from-terraform"
            }
          }
        }
      ]
    }
  ]
}